# dg2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/simple/: .cproject  .mxproject  .project  STM32C031C6TX_FLASH.ld  simple.ioc
examples/simple/Core/Src/: main.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c
include/: dg2.h  dg2_circ_buff.h  dg2_conf.h  dg2_crc.h  dg2_curve.h  dg2_disp.h  dg2_pkt.h  dg2_svi.h
src/: dg2.c  dg2_circ_buff.c  dg2_crc.c  dg2_curve.c  dg2_disp.c  dg2_pkt.c  dg2_svi.c
tests/: CMakeLists.txt  circ_buff.cpp  pkt.cpp  pkt.hpp  pkts.hpp  tests.cpp
